{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 63,
  "lineage": "f74efa30-8625-f9eb-13c0-d9a16039d246",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_server",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02fe94dee086c0c37",
            "arn": "arn:aws:ec2:us-east-1:225998586233:instance/i-078274dd3edd1645a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-078274dd3edd1645a",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "jenkins_hands_on",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-004b305b0489f4913",
            "private_dns": "ip-172-31-95-113.ec2.internal",
            "private_ip": "172.31.95.113",
            "public_dns": "ec2-107-20-88-235.compute-1.amazonaws.com",
            "public_ip": "107.20.88.235",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-0af4e002da07cd88d",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "jenkins_server_20210207174414966200000001"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-091b6cfa5224899af",
            "tags": {
              "Name": "Jenkins-Server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00e87643d424dfab3"
            ]
          },
          "dependencies": [
            "aws_security_group.jenkins_server"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02fe94dee086c0c37",
            "arn": "arn:aws:ec2:us-east-1:225998586233:instance/i-05517793f126de1a7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05517793f126de1a7",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "jenkins_hands_on",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08bd7eafde463a521",
            "private_dns": "ip-172-31-78-58.ec2.internal",
            "private_ip": "172.31.78.58",
            "public_dns": "ec2-3-238-252-221.compute-1.amazonaws.com",
            "public_ip": "3.238.252.221",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 150,
                "throughput": 0,
                "volume_id": "vol-053a5c53d43af7692",
                "volume_size": 50,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "webserver_20210207174414966200000002"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-072ff65735b6f255e",
            "tags": {
              "Name": "webserver"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-026b879eb5b3e07a0"
            ]
          },
          "dependencies": [
            "aws_security_group.webserver"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_server",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:225998586233:security-group/sg-00e87643d424dfab3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Accesso full para todos do security group",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-00e87643d424dfab3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Accesso ao SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Accesso ao SSH",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "jenkins_server_20210207174414966200000001",
            "name_prefix": "jenkins_server_",
            "owner_id": "225998586233",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jenkins_server"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b7aaa4fa34ae2ab8"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:225998586233:security-group/sg-026b879eb5b3e07a0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Accesso full para todos do security group",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-026b879eb5b3e07a0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Accesso ao Nginx",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Accesso ao SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Accesso ao WebSite",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              }
            ],
            "name": "webserver_20210207174414966200000002",
            "name_prefix": "webserver_",
            "owner_id": "225998586233",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "webserver"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b7aaa4fa34ae2ab8"
          }
        }
      ]
    }
  ]
}